Layout changes, page for explaining Why Mindfulness, plus Student and Staff resources pages, added a footer.

--- a/Intro.Rmd
+++ b/Intro.Rmd
@@ -2,7 +2,11 @@
 title: "What is Mindfulness?"
 ---
 
-#*What exactly is mindfulness?*
-Mindfulness can mean many things to many people. Attention. Relaxation. Focus. 
+<br>
 
-Here, we use the most well-known and widely-used definition: the ability to deliberately redirect attention without judgement to the present moment (Kabat-Zinn, 2003).
+
+####*Mindfulness can mean many things to many people. Attention. Relaxation. Focus.* 
+
+<br>
+
+Here, we use one of the most well-known and widely-used definition: the ability to deliberately redirect attention without judgement to the present moment (Kabat-Zinn, 2003).
