--- a/index.Rmd
+++ b/index.Rmd
@@ -2,10 +2,12 @@
 title: "Planning for Calm"
 ---
 
-~site under development~
+<center> ~site under development~ </center>
 
-We invite students to pause during their day, take a few breaths and be mindful in the present moment...
+<br>
 
-We provide resources for students to learn about mindfulness, its benefits and how it can be integrated into student lifestyle.
+####*We invite students to pause during their day, take a few breaths and be mindful in the present moment...*
 
-We also provide resources for lecturers and staff who are interested in incorporating mindfulness into their courses and other aspects of work.
+<br>
+
+Planning for Calm aims to provide resources for students to learn about mindfulness, its benefits and how it can be integrated into the hectic student lifestyle. We also provide resources for lecturers and staff who are interested in incorporating mindfulness into their courses and other aspects of work.
