--- a/Intro.Rmd
+++ b/Intro.Rmd
@@ -1,3 +1,18 @@
+<head>
+<!-- Hotjar Tracking Code for https://naomiclark.github.io/planning-for-calm/ -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:1089544,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+</head>
+
+
 ---
 title: "What is Mindfulness?"
 ---
@@ -9,4 +24,4 @@ title: "What is Mindfulness?"
 
 <br>
 
-Here, we use one of the most well-known and widely-used definition: the ability to deliberately redirect attention without judgement to the present moment (Kabat-Zinn, 2003).
+Here, we use one of the most well-known and widely-used definition: the ability to deliberately redirect attention without judgement to the present moment (Kabat-Zinn, 1994).
