--- a/Resources_main.Rmd
+++ b/Resources_main.Rmd
@@ -14,18 +14,5 @@
 
 
 ---
-title: "Planning for Calm"
+title: "Resources"
 ---
-
-<br>
-<br>
-
-<center> ~site under development~ </center>
-
-<br>
-
-####*We invite students to pause during their day, take a few breaths and be mindful in the present moment...*
-
-<br>
-
-Planning for Calm aims to provide resources for students to learn about mindfulness, its benefits and how it can be integrated into the hectic student lifestyle. We also provide resources for lecturers and staff who are interested in incorporating mindfulness into their courses and other aspects of work.
