--- a/Intro.Rmd
+++ b/Intro.Rmd
@@ -34,4 +34,31 @@ title: "What is Mindfulness?"
 
 <br>
 
-Here, we use one of the most well-known and widely-used definition: the ability to deliberately redirect attention without judgement to the present moment (Kabat-Zinn, 1994).
+#####There are many definitions of mindfulness...
+
+At Planning for Calm we use one of the most well-known and widely-used definition: the ability to deliberately redirect attention without judgement to the present moment (Kabat-Zinn, 1994).
+
+<br>
+<br>
+
+#####Here are some definitions offered by students
+
+<br>
+
+*"I thought I knew what mindfulness was... I thought it was about trying to clear your mind and not think of anything but... it's more about recognising [thoughts] and pulling yourself back to the breath"*
+
+<br>
+
+*"Mindfulness isn't just sitting down and calming yourself... it's simultaneously more active and passive than that... it is about focussed attention"*
+
+<br>
+
+*"It's just taking that time to... reset yourself, just to get back to 'normal' levels, to reduce that anxiety or stress... to be centred"*
+
+<br>
+
+*"It's taking that time [for] myself... what thoughts are coming into my head or how my body feels..."*
+
+
+<br>
+<br>
