--- a/FAQ.Rmd
+++ b/FAQ.Rmd
@@ -43,7 +43,7 @@ Some people may choose to introduce spiritual aspects to their practice, if they
 
 <br>
 
-###Isn't mindfulness just some vague, idealistic nonsense?
+###Isn't mindfulness just some vague nonsense?
 This is a misconception about mindfulness. In fact, mindfulness has a vast amount of research behind it, with specific journals and international conferences. With mindfulness being so popular, sometimes mindfulness can be watered-down, but by following exercises based on research, such as MBCT or MBSR, you can learn concrete practices that can enhance your understanding of the mind and increase your ability to be mindful. See our [Resources](Resources_main.html) section for more information on the science behind mindfulness.
 
 <br>
