--- a/why_mindfulness.Rmd
+++ b/why_mindfulness.Rmd
@@ -27,10 +27,38 @@
 title: "Why Mindfulness?"
 ---
 
-Here we could talk about the current wellbeing issues in tertiary education.
+<br>
 
-###Issues
+Mental health problems on university campuses are one the rise, with around 87% of students reporting suffering from stress (National Union of Students, 2016). We believe that practice mindfulness may offer some support to students to help them navigate student life and manage stress.
+
+<br>
+
+###Effects of Mindfulness
+
+"I do feel less stressed… I might have a pile of problems… but taking that time [for] myself [to be] mindful… make[s] me feel better." (L., student)
+
+<br>
+*Please note that these effects are not guaranteed as each individual's experience with mindfulness is different and neither are they, nor mindfulness, intended to be a replacement for seeking medical advice.*
+
+<br>
+
+####For Students
+*   Multiple benefits for students (Solhaug et al., 2016)
+*   Act to reduce stress, depression and anxiety (Cavanagh et al, 2013; de Vibe et al., 2015; Kerrigan et al., 2017)
+*   Help reduce distractibility (Miller et al., 2018)
+*   Lower social anxiety (Tan et al., 2018)
+*   Improve sleep problems (Greeson et al., 2011)
+*   Mindfulness can act as a preventative measure, as a “defense” against future stress (de Vibe et al., 2015)
+
+<br>
+
+####For Staff
+~ under construction~
+
+<br>
+
+####For a University
+~ under construction~
 
 
-###Benefits
-Here we could outline the benefits available on student, staff and university level.
+<br>
