--- a/Get_Involved.Rmd
+++ b/Get_Involved.Rmd
@@ -28,5 +28,28 @@ title: "Get Involved"
 ---
 
 <br>
+Interested in getting involved?
 
-###Information Session
+Please come along to one of our information sessions!
+
+<br>
+
+###Information Sessions
+Informal information sessions will give you the oppunity to learn more about mindfulness, how it can be applied to student life, what apps to use and more about our project. Sessions will conclude with a guided meditation and ample time to ask any questions. Please feel free to stay for as little or as long as you want.
+
+Information sessions will take place on Mondays, 4-5pm.
+
+November 19th - Sir Alwyn Williams (SAW) building, 422
+
+December 3rd - SAW, 422
+
+December 9th - SAW, 423
+
+<br>
+
+###Mini-Information Sessions
+If you cannot make it to the larger sessions, smaller sessions will also be taking place at various times to give you the opportunity to pop by and learn more about the project and have a mindful break.
+
+Please [book](https://doodle.com/poll/emyr48wzm7ap3963) a time.
+
+<br>
