--- a/Glossary.Rmd
+++ b/Glossary.Rmd
@@ -27,7 +27,14 @@
 title: "Glossary"
 ---
 
+<br>
+
 There is a lot of specific mindfulness terms you might encounter so we've put together this handy glossary - we hope it's helpful!
+
+The glossary is continuously growing so keep checking back to find out more.
+
+<br>
+<br>
 
 
 ### A
@@ -41,48 +48,30 @@ To put it another way... we can accept that pineapple pizza toppings exist, but 
 By accepting that the thoughts or distractions exist, we can acknowledge their presence and from there be in a better position to change how we respond to them.
 </p>
 
-#####Anapanasati
 
-#####Attachment
-
-#####Awareness
 
 <br>
 
 ### B
-#####Bells
-Sometimes, meditations can involve bells to help signify certain points in the meditation, typically the beginning and the end. It can be helpful to use bells as a way to initially focus our attention, carefully listening to the sound until it fades.
-
-#####Body-Scan
-
-#####Breathing-Focused
-
-#####Buddha/ Buddhism
+#####Bells (Tingsa)
+Sometimes meditations can involve bells to help signify certain points in the meditation, typically the beginning and the end. It can be helpful to use bells as a way to initially focus our attention, carefully listening to the sound until it fades.
 
 <br>
 
-### C
-#####Compassion
-
+#####Body-Scan
+A technique in which attention is placed at specific parts of the body and moved to the next following a particular direction as if 'scanning' the body. When focussing attention on a specific location, explore any sensations that arise with a sense of curiosity.
 
 <br>
 
 ### D
 #####Decentering
+The ability to see your thoughts as separate to yourself, as just mental events rather than as absolute truth (Papies et al., 2012).
 
 <br>
 
 ### E
 #####Eating Meditations / Mindful Eating
-
-<br>
-
-### F
-
-<br>
-
-### G
-#####Gratitude
+A practice in which deliberate attention is placed onto food. In this, you might focus on the taste, texture, smell or anytother characteristic of the food. This practice is typically done using a raisin, but it can be done with any food or even with drinks as long as you are trying to engage your full awareness.
 
 <br>
 
@@ -92,70 +81,48 @@ No doubt you've often heard of this already! Although it can be viewed as stereo
 
 <br>
 
-### I
-#####Insight
-#####Intention
-
-<br>
-
 ### J
 #####Journey
 Mindfulness is sometimes described as a 'journey' in a sense that it helps you get back in touch with yourself and is a personal exploration, often involving various twists and turns.
 
 <br>
 
-### K
-
-<br>
-
 ### L
-#####Laughing Meditation
 
 #####Loving-Kindness
+This is a specific type of meditation which focuses on cultivating feelings of compassion and kindness towards others and yourself.
 
 <br>
 
 ### M
 #####Meditation
-
-#####Mindfulness
-
-#####Mindfulness-Based Cognitive Therapy (MCBT)
-
-#####Mindfulness-Based Stress Reduction (MBSR)
-
-#####Movement Meditation
+Like mindfulness itself, the definition of 'meditation' is also debated. One view is to understand meditation as being a deliberate practice used to focus your attention, which in turn can increase your ability to be 'mindful'.
 
 <br>
 
-### N
-#####Non-Judgemental
+#####Mindfulness
+Many different definitions of mindfulness (Black, 2006). One of the more well-known definitions is that proposed by Kabat-Zinn: the ability to deliberately redirect attention to the breath without judgement (Kabat-Zinn, 1993). However, other definitions exist arguing that mindfulness is more to do with being open to and aware of changes and novelty in ones environment (Langer & Moldoveanu, 2000). Typically most studies into mindfulness and its effects understand mindfulness according to the former definition. Although having different definitions can make it difficult to understand what consistitutes mindfulness itself, it does allow for the consideration and exploration of features and functions that some defintions may not.
 
-#####Non-Reactivity
+Mindfulness can be understood as existing as both a 'state' (how mindful you are right now) and as a 'trait' (how mindful you are in general) (Brown & Ryan, 2003). Questionnaires have been designed to measure these two forms, each slightly different in their conceptualisation. A well-known trait mindfulness questionnaire, the Five Facet Mindfulness Questionnaire (Baer et al., 2006), views mindfulness as consisting of five key features or 'facets': non-judgement and non-reaction to thoughts, feelings etc., acting with awareness, observation of feelings and sensations, and the ability to describe those feelings and sensations.
+
+<br>
+
+#####Mindfulness-Based Cognitive Therapy (MCBT)
+A cognitive therapy that incorporates elements of mindfulness into its programme.
+
+<br>
+
+#####Mindfulness-Based Stress Reduction (MBSR)
+Originally established by Jon Kabat-Zinn in 1982 to help individuals suffering from chronic pain, MBSR has become a standard in mindfulness interventions and aims to help the practitioner cope better with stress.
+
 
 <br>
 
 ### O
-#####Observe
 
-#####Open-Meditation
-Typically non-guided meditation.
+#####Open Awareness Meditation
+Typically a non-guided meditation that often involves focussing attention externally to your surroundings.
 
-<br>
-
-### Q
-
-<br>
-
-### R
-#####Resiliance
-
-#####Resistance
-
-<br>
-
-### S
-#####Self-Compassion
 
 
 <br>
@@ -164,21 +131,12 @@ Typically non-guided meditation.
 #####Timed-Meditation
 A typically quiet or non-guided meditation track, lasting for a specific amount of time that often uses bells to signal the start and the end.
 
-#####Thoughts 
-
-<br>
-
-### U
 
 <br>
 
 ### V
 #####Visualisation
-Some individuals may find that imagining a sunset or placing themselves sitting on a beach or even with a loved one or pet can help them to feel a little calmer and enter into a mindful state more easily. It can help to visualise thoughts as objects that can float away to emphasise the temporary, fleeting nature of thoughts such as letting go of balloons or watching leaves float down a river...
-
-<br>
-
-### W
+Some individuals may find that imagining a sunset or placing themselves sitting on a beach or even with a loved one or pet can help them to feel a little calmer and enter into a mindful state more easily. It can help to visualise thoughts as objects that can float away to emphasise the temporary, fleeting nature of thoughts such as letting go of balloons or watching leaves float down a river.
 
 <br>
 
