--- a/index.Rmd
+++ b/index.Rmd
@@ -38,4 +38,4 @@ title: "Planning for Calm"
 
 <br>
 
-Planning for Calm aims to provide resources for students to learn about mindfulness, its benefits and how it can be integrated into the hectic student lifestyle. We also provide resources for lecturers and staff who are interested in incorporating mindfulness into their courses and other aspects of work.
+Planning for Calm aims to provide resources for students to learn about mindfulness, its benefits and how it can be integrated into the hectic student lifestyle. We also hope to provide resources for lecturers and staff who are interested in incorporating mindfulness into their courses and other aspects of work.
