Added pictures from Unsplash.

--- a/Contact.Rmd
+++ b/Contact.Rmd
@@ -29,9 +29,15 @@ title: "Contact"
 
 <br>
 
+<img src="pfc_images/contact.jpg" style="width: 100%">
+
+<br>
+
 We are currently working on establishing a email for the project.
 
 In the meantime, if you have any questions please contact our research assistant, [Naomi](mailto:2075195c@student.gla.ac.uk)
 
 
 <br>
+
+All images sourced from [Unsplash](https://unsplash.com/).
