--- a/Get_Involved.Rmd
+++ b/Get_Involved.Rmd
@@ -28,9 +28,14 @@ title: "Get Involved"
 ---
 
 <br>
-Interested in getting involved?
 
-Please come along to one of our information sessions!
+<img src="pfc_images/get_involved.jpg" style="width: 100%">
+
+<br>
+
+###*Interested in getting involved?*
+
+###Please come along to one of our information sessions!
 
 <br>
 
