--- a/Glossary.Rmd
+++ b/Glossary.Rmd
@@ -29,6 +29,10 @@ title: "Glossary"
 
 <br>
 
+<img src="pfc_images/glossary.jpg" style="width: 100%">
+
+<br>
+
 There is a lot of specific mindfulness terms you might encounter so we've put together this handy glossary - we hope it's helpful!
 
 The glossary is continuously growing so keep checking back to find out more.
