--- a/Intro.Rmd
+++ b/Intro.Rmd
@@ -29,6 +29,9 @@ title: "What is Mindfulness?"
 
 <br>
 
+<img src="pfc_images/index_intro.jpg" style="width: 100%">
+
+<br>
 
 ####*Mindfulness can mean many things to many people. Attention. Relaxation. Focus.* 
 
