--- a/why_mindfulness.Rmd
+++ b/why_mindfulness.Rmd
@@ -29,6 +29,10 @@ title: "Why Mindfulness?"
 
 <br>
 
+<img src="pfc_images/why.jpg" style="width: 100%">
+
+<br>
+
 Mental health problems on university campuses are one the rise, with around 87% of students reporting suffering from stress (National Union of Students, 2016). We believe that practice mindfulness may offer some support to students to help them navigate student life and manage stress.
 
 <br>
