--- a/index.Rmd
+++ b/index.Rmd
@@ -27,10 +27,9 @@
 title: "Planning for Calm"
 ---
 
-<br>
-<br>
-
 <center> ~site under development~ </center>
+
+<img src="pfc_images/index_intro.jpg" style="width: 100%">
 
 <br>
 
