Typo in Contact section.

--- a/Contact.Rmd
+++ b/Contact.Rmd
@@ -33,7 +33,7 @@ title: "Contact"
 
 <br>
 
-We are currently working on establishing a email for the project.
+We are currently working on setting up an email for the project.
 
 In the meantime, if you have any questions please contact our research assistant, [Naomi](mailto:2075195c@student.gla.ac.uk)
 
