--- a/why_mindfulness.Rmd
+++ b/why_mindfulness.Rmd
@@ -33,7 +33,7 @@ title: "Why Mindfulness?"
 
 <br>
 
-Mental health problems on university campuses are one the rise, with around 87% of students reporting suffering from stress (National Union of Students, 2016). We believe that practice mindfulness may offer some support to students to help them navigate student life and manage stress.
+Mental health problems on university campuses are on the rise, with around 87% of students reporting suffering from stress (National Union of Students, 2016). We believe that practice mindfulness may offer some support to students to help them navigate student life and manage stress.
 
 <br>
 
