Added more to the 'organisations' section of resources.

--- a/Resources_main.Rmd
+++ b/Resources_main.Rmd
@@ -83,7 +83,11 @@ Here are some great videos that explain some of the scientific underpinnings beh
 
 ###find out about related organisations
 
-[Oxford Mindfulness Centre](http://oxfordmindfulness.org/)
+*   [Oxford Mindfulness Centre](http://oxfordmindfulness.org/)
+
+*   [Mind, the mental health charity, has an information page on mindfulness](https://www.mind.org.uk/information-support/drugs-and-treatments/mindfulness/#.W-1FaJP7Tow)
+
+*   [Mental Health Foundation's 'Be Mindful' programme](https://bemindful.co.uk/)
 
 
 <br>
@@ -134,4 +138,5 @@ Here's our reference list. As we add more content and include more research on m
 *   Tan, J., Lo, P., Ge, N., & Chu, C. (2016). Self-esteem mediates the relationship between mindfulness and social anxiety among Chinese undergraduate students. *Social Behavior and Personality: an international journal*, 44(8), 1297-1304.
 
 
+<br>
 <br>
