Small updates to various pages. Added in info regarding the Drop-In sessions.

--- a/Contact.Rmd
+++ b/Contact.Rmd
@@ -33,9 +33,11 @@ title: "Contact"
 
 <br>
 
-We are currently working on setting up an email for the project.
+If you have any questions or want to chat about mindfulness, please feel free to contact us at:
 
-In the meantime, if you have any questions please contact our research assistant, [Naomi](mailto:2075195c@student.gla.ac.uk)
+hello@planningforcalm.co.uk
+
+
 
 
 <br>
