--- a/FAQ.Rmd
+++ b/FAQ.Rmd
@@ -82,10 +82,19 @@ A really handy way to access meditation tracks and learn meditation is through a
 <br>
 
 ###What apps are there available?
-Although Planning for Calm does not endorce a specific app, here are are some popular apps available for smartphones. Try them out! It may take a few gos to find a one you that suits you as each app can have different meditations and styles. Many have an initial trial phase for you to get a feel for the app and to try out meditation.
+Although Planning for Calm does not endorse a specific app, here are are some popular apps available for smartphones. Try them out! It may take a few gos to find a one you that suits you as each app can have different meditations and styles. 
+
+Many have an initial trial phase for you to get a feel for the app and to try out meditation before subscribing.
 
 See our [Resources](Resources_main.html) section for a selection of apps available.
 
+
+<br>
+
+###Why apps?
+There's an app for everything these days! And mindfulness is no exception! Mindfulness apps offer a one-stop-shop for mindfulness resources and practices; there's no course book, no papers, no CDs. It's all presented together in one handy app!
+
+The real benefit of mindfulness apps is that it puts your learning back into your hands. Unlike traditional 8-week courses, mindfulness apps allow you to complete your practice when you like, where you like. There's no rushing around to classes or adhering to a rigid timetable. Mindfulness apps fit around you!
 
 <br>
 
