--- a/Get_Involved.Rmd
+++ b/Get_Involved.Rmd
@@ -38,6 +38,15 @@ title: "Get Involved"
 ###Please come along to one of our information sessions!
 
 <br>
+###**UPDATED: Drop-In Info Sessions**
+For those with an interest in mindfulness and finding out more about the project, pop along with your questions to one of our drop-in info sessions!
+
+Tues 11th, Wed 12th, Thurs 13th Dec from 1-3pm
+
+Sir Alwyn Williams building, Level 5 study space
+
+
+<br>
 
 ###Information Sessions
 Informal information sessions will give you the oppunity to learn more about mindfulness, how it can be applied to student life, what apps to use and more about our project. Sessions will conclude with a guided meditation and ample time to ask any questions. Please feel free to stay for as little or as long as you want.
@@ -52,7 +61,7 @@ December 9th - SAW, 423
 
 <br>
 
-###Mini-Information Sessions
+###Bookable Sessions
 If you cannot make it to the larger sessions, smaller sessions will also be taking place at various times to give you the opportunity to pop by and learn more about the project and have a mindful break.
 
 Please [book](https://doodle.com/poll/emyr48wzm7ap3963) a time.
