--- a/Intro.Rmd
+++ b/Intro.Rmd
@@ -39,7 +39,9 @@ title: "What is Mindfulness?"
 
 #####There are many definitions of mindfulness...
 
-At Planning for Calm we use one of the most well-known and widely-used definition: the ability to deliberately redirect attention without judgement to the present moment (Kabat-Zinn, 1994).
+At Planning for Calm we use one of the most well-known and widely-used definition: 
+**the ability to deliberately redirect attention without judgement to the present moment**
+(Kabat-Zinn, 1994).
 
 <br>
 <br>
