--- a/why_mindfulness.Rmd
+++ b/why_mindfulness.Rmd
@@ -61,8 +61,9 @@ Mental health problems on university campuses are on the rise, with around 87% o
 
 <br>
 
-####For a University
+####For a College
 ~ under construction~
 
+Many universities throughout the UK now offer mindfulness programmes to students. Taking part in Planning for Calm and promoting development of mindfulness skills amongst your students could help to demonstrate a concrete concern and action for improving student wellbeing within your college.
 
 <br>
